Fix up code in paragraphs to wrap appropriately

--- a/_resources/scss/typography.scss
+++ b/_resources/scss/typography.scss
@@ -82,6 +82,7 @@ code {
 		display: inline;
 		padding: 0 .25em;
 		margin: inherit;
+		white-space: inherit;
 	}
 }
 
